--- a/AntiRats2/schedule.html
+++ b/AntiRats2/schedule.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
-            Authors for Volume 2
+            Book Schedule
         </title>
     </head>
 
@@ -16,6 +16,9 @@
 	</li>
 	<li>
 	<a href="bios.html">Bios</a>
+	</li>
+	<li>
+	<a href="schedule.html">Schedule</a>
 	</li>
 	<li>
 	<a href="https://www.springer.com/series/15722">Book Series</a>
@@ -68,117 +71,88 @@
         </div>
 
         <h1>
-            Authors for Volume 2
+            Book Schedule
         </h1>
 
-        <ul>
-            <li>
-                Giambattista Vico
-                <br />
-                    Emily Finley,
-                    Catholic University of America
-            </li>
-
-            <li>
-                Joseph de Maistre
-            </li>
-
-            <li>
-                Samuel Coleridge
-            </li>
-
-            <li>
-                Fyodor Dostoevsky
-                <br />
-                    Leslie Marsh,
-                    The University of British Columbia
-            </li>
-
-            <li>
-                Lewis Carroll
-            </li>
-
-            <li>
-                Owen Barfield
-            </li>
-
-            <li>
-                J.R.R. Tolkien:
-                <br />
-                    <a href="bios.html#blake">
-                        Nathanael Blake
-                    </a>
-            </li>
-
-            <li>
-                G.K. Chesterton
-                <br>
-                Eric Kos
-            </li>
-
-            <li>
-                Irving Babbitt
-                <br />
-                <a href="bios.html#garrison">
-                    Justin Garrison,
-                </a>
-                Associate Professor of Political Science
-                Roanoke College
-            </li>
-
-            <li>
-                Elizabeth Anscombe
-            </li>
-
-            <li>
-                Robert Nisbet
-                <br />
-                    <a href="bios.html#sheahan">
-                        Luke Sheahan,
-                    </a>
-                    Assistant Professor, Department of Political Science
-                    Duquesne University
-
-            </li>
-
-            <li>
-                Paul Feyerabend: Anything Goes
-            </li>
-
-            <li>
-                Walker Percy
-            </li>
-
-            <li>
-                Elinor Ostrom
-            </li>
-
-            <li>
-                John Gray
-                <br />
-                Nathan Cockerham
-            </li>
-
-            <li>
-                James C. Scott:
-                Seeing Like a Rationalist
-            </li>
-
-            <li>
-                Roger Scruton
-                <br />
-                    <a href="bios.html#horcher">
-                        Ferenc Hörcher</a>,
-                Pázmány Péter Catholic University, Budapest and The Institute
-                of Philosophy of the Hungarian Academy of Sciences
-            </li>
-
-            <li>
-                Nassim Nicholas Taleb:
-                The Lindy Effect
-            </li>
-
-        </ul>
+        <table>
+            <col style="width:12%">
+            <col style="width:18%">
+            <col style="width:70%">
+            <thead>
+            <tr>
+                <th>
+                    Date
+                </th>
+                <th>
+                    Deliverable
+                </th>
+                <th>
+                    Notes
+                </th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <td class="key-col">
+                    June 1, 2021
+                </td>
+                <td>
+                    Preliminary Drafts
+                </td>
+                <td>
+                    Optional but encouraged! This will allow us to
+                    see each others' work to determine how our papers might
+                    resonate with others. In producing Volume I, this idea was
+                    successful in producing a more unified volume than is
+                    typical of collections.
+                </td>
+            </tr>
+            <tr>
+                <td class="key-col">
+                    Aug. 1, 2021
+                </td>
+                <td>
+                    Contributor's Final Drafts
+                </td>
+                <td>
+                    This will give Ken and Gene time to edit, query you, etc.
+                </td>
+            </tr>
+            <tr>
+                <td class="key-col">
+                    Oct. 1, 2021
+                </td>
+                <td>
+                    Final draft to Palgrave
+                </td>
+                <td>
+                    We will submit to Palgrave.
+                </td>
+            </tr>
+            <tr>
+                <td class="key-col">
+                    Jan. 1, 2022?
+                </td>
+                <td>
+                    Peer review completed
+                </td>
+                <td>
+                    Palgrave says this may take 2-3 months.
+                </td>
+            </tr>
+            <tr>
+                <td class="key-col">
+                    Mar. 1, 2022?
+                </td>
+                <td>
+                    Publication
+                </td>
+                <td>
+                    Probably optimistic!
+                </td>
+            </tr>
+            </tbody>
+        </table>
 
     </body>
 </html>
