--- a/AntiRats2/bios.html
+++ b/AntiRats2/bios.html
@@ -18,6 +18,9 @@
 	<a href="bios.html">Bios</a>
 	</li>
 	<li>
+	<a href="schedule.html">Schedule</a>
+	</li>
+	<li>
 	<a href="https://www.springer.com/series/15722">Book Series</a>
 	</li>
 </ul>
