Adding pdfs of Coats and Wyllie drafts.

--- a/AntiRats2/graham.html
+++ b/AntiRats2/graham.html
@@ -81,7 +81,6 @@
         </p>
 
         <p>
-
         This essay examines the views of the 20th century
         sinologist/philosopher A.C. Graham on the differences between
         anti-rationalism and irrationalism, and obviously, rationalism as well.
@@ -102,7 +101,10 @@
         similarities between Graham’s and Oakeshott’s critiques of rationalism
         (the latter of whose views I examined in the first volume of this
         edited work).
+        </p>
 
+        <p>
+            <a href="FirstDrafts/Coats.pdf">Initial draft</a> 
         </p>
 
     </body>
