--- a/AntiRats2/eliot.html
+++ b/AntiRats2/eliot.html
@@ -95,5 +95,9 @@
         obsolete.
         </p>
 
+        <p>
+            <a href="FirstDrafts/Wyllie.pdf">Initial draft</a> 
+        </p>
+
     </body>
 </html>
