--- a/AntiRats2/bulgakov.html
+++ b/AntiRats2/bulgakov.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
-                Devils, Dogs, and Frogs: Mikhail Bulgakov’s Political Allegorie
+                The Moral Personality of Mikhail Bulgakov
         </title>
     </head>
 
@@ -71,7 +71,7 @@
         </div>
 
         <h1>
-                Devils, Dogs, and Frogs: Mikhail Bulgakov’s Political Allegorie
+                The Moral Personality of Mikhail Bulgakov
         </h1>
 
         <p>
