Made new pascal commit.

--- a/AntiRats2/pascal.html
+++ b/AntiRats2/pascal.html
@@ -120,5 +120,9 @@
         his epistemology and anthropology.
         </p>
 
+        <p>
+            <a href="FirstDrafts/Chamberlain.pdf">Initial draft</a> 
+        </p>
+
     </body>
 </html>
