Added Cockram on Gray.

--- a/AntiRats2/gray.html
+++ b/AntiRats2/gray.html
@@ -92,5 +92,9 @@
         for dealing with contemporary objections to liberalism.
         </p>
 
+        <p>
+            <a href="FirstDrafts/Cockram.pdf">Initial draft</a> 
+        </p>
+
     </body>
 </html>
