Corrected Shehan title.

--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -261,7 +261,8 @@
             <li>
                 <a href="FirstDrafts/Nisbet.pdf">
                     Robert Nisbet:
-                    Art, History, and the Anti-Rationalism of Sociological Methodolog
+                    Art, History, and the Anti-Rationalism of Sociological
+                    Methodology
                 </a>
                 <br />
                     <a href="bios.html#sheahan">
