Changed vol II title.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                 <h3>
                     <a href="AntiRats2/index.html">
-                        Critics of Enlightenment Rationalism, Vol. II
+                        Critics of Enlightenment Rationalism Revisited
                     </a>
                 </h3>
 
