--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -5,8 +5,7 @@
         <meta charset="UTF-8">
         <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
-            Critics of Enlightenment Rationalism:
-            Volume II
+            Critics of Enlightenment Rationalism Revisited
         </title>
     </head>
 
@@ -72,8 +71,7 @@
         </div>
 
         <h1>
-            Critics of Enlightenment Rationalism:
-            Volume II
+            Critics of Enlightenment Rationalism Revisited
         </h1>
 
         <p class="author_info">
