--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -262,7 +262,7 @@
             </li>
 
             <li>
-                <a href="bateson.html">
+                <a href="FirstDrafts/Bateson.pdf">
                 Beautiful Minds: Gregory Bateson on Humans, Animals and Ecological Systems
                 </a>
                 <br />
@@ -355,7 +355,7 @@
                 analysing the modern phenomenon of Enlightenment rationalism
                 whose distinguished critics range from the historically
                 important Edmund Burke, Alexis de Tocqueville, and Friedrich
-                Nietzsche, to our near contemporaries Hans-Georg Gadamer, Eric
+                Nietzsche, to our near contemporaries Hans-Georg Gadamer, Erii
                 Voegelin and Michael Oakeshott. The connecting and fascinating
                 thread that runs through the volume is a relentless critique of
                 a style of thinking that prioritises the pursuit of certainty,
