Adding to Shackle essay.

--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -101,7 +101,7 @@
 
         <ul class="nested">
             <li>
-                <a href="drafts/Intro.pdf">
+                <a href="Intro.html">
                 Introduction
                 </a>
                 <br>
@@ -314,7 +314,9 @@
             </li>
 
             <li>
+                <a href="Shackle.html">
                 The Kaleidic World of G.L.S. Shackle
+                </a>
                 <br>
                 <a href="bios.html#callahan">
                 Gene Callahan</a>,
