Added Hampshire chapter.

--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -303,9 +303,9 @@
             </li>
 
             <li>
-                <a href="hampshire.html">
-                Stuart Hampshire and the Ineluctable
-                Imperfectability of the World
+                <a href="FirstDrafts/Hampshire.pdf">
+                Intention, Intellect, and Imagination:
+                Stuart Hampshire’s Pluralism
                 </a>
                 <br>
                     <a href="bios.html#mcintyre">
