--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -164,7 +164,7 @@
             </li>
 
             <li>
-                <a href="bulgakov.html">
+                <a href="FirstDrafts/Bulgakov.pdf">
                 The Moral Personality of Mikhail Bulgakov
                 </a>
                 <br />
