Adding people to the intro.

--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -115,21 +115,21 @@
             </li>
 
             <li>
-                <a href="vico.html">
-                    Giambattista Vico and the Imaginative Sources of Political Division</a>
-                <br />
-                    <a href="bios.html#finley">
-                    Emily Finley</a>,
-                    Stanford University
-            </li>
-
-            <li>
                 <a href="FirstDrafts/Pascal.pdf">
                     Conservatism and Social Criticism:
                     Pascal on Faith, Reason, and Politic</a>
                 <br />
                     <a href="bios.html#chamberlain">
                     Tyler Chamberlain</a>
+            </li>
+
+            <li>
+                <a href="FirstDrafts/Vico.pdf">
+                    Giambattista Vico and the Imaginative Sources of Political Division</a>
+                <br />
+                    <a href="bios.html#finley">
+                    Emily Finley</a>,
+                    Stanford University
             </li>
 
             <li>
@@ -153,6 +153,15 @@
             </li>
 
             <li>
+                <a href="weber.html">
+                    Max Weber and the Limits of Reason</a>
+                <br />
+                    <a href="bios.html#miryekta">
+                    Lucie Miryekta</a>,
+                    Catholic University of America
+            </li>
+
+            <li>
                 <a href="FirstDrafts/Bulgakov.pdf">
                 The Moral Personality of Mikhail Bulgakov
                 </a>
@@ -160,15 +169,6 @@
                 <a href="bios.html#ferrell">
                     Jason Ferrell</a>,
                 Concordia University
-            </li>
-
-            <li>
-                <a href="weber.html">
-                    Max Weber and the Limits of Reason</a>
-                <br />
-                    <a href="bios.html#miryekta">
-                    Lucie Miryekta</a>,
-                    Catholic University of America
             </li>
 
             <li>
@@ -268,15 +268,6 @@
                 <a href="bios.html#seven">
                     G&uuml;lsen Seven</a>,
                     TED University
-            </li>
-
-            <li>
-                <a href="aron.html">
-                    Raymond Aron versus the Unpolitical Revolution</a>
-                <br />
-                    <a href="bios.html#smith">
-                        Travis D. Smith</a>,
-                    Concordia University
             </li>
 
             <li>
