Added Weber docs.

--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -153,7 +153,7 @@
             </li>
 
             <li>
-                <a href="weber.html">
+                <a href="FirstDrafts/Weber.pdf">
                     Max Weber and the Limits of Reason</a>
                 <br />
                     <a href="bios.html#miryekta">
