--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -227,7 +227,7 @@
             </li>
 
             <li>
-                <a href="lowith.html">
+                <a href="FirstDrafts/Lowith.pdf">
                 Nec Spe Nec Metu:
                 Philosophic Catharsis in Karl Löwith’s Meaning in History</a>
                 <br />
