--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -182,7 +182,7 @@
             </li>
 
             <li>
-                <a href="tolkien.html">
+                <a href="FirstDrafts/Tolkien.pdf">
                     J.R.R. Tolkien: Tales Against Domination</a>
                 <br />
                     <a href="bios.html#blake">
