Added Horcher bio.

--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -305,7 +305,7 @@
             </li>
 
             <li>
-                <a href="gray.html">
+                <a href="FirstDrafts/Gray.pdf">
                 John Gray's Agon: Liberalism, Morality, Politics
                 </a>
                 <br />
