--- a/AntiRats2/bios.html
+++ b/AntiRats2/bios.html
@@ -84,7 +84,7 @@
                 of scholarly and popular publications. He resides in Missouri.
                 </a>
                 <br>
-                <img src="graphics/NBlake.jpg" width="14%" class="center-img">
+                <img src="graphics/Blake.jpg" width="14%" class="center-img">
             </li>
 
             <hr width="44%">
