--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -254,7 +254,7 @@
                 </a>
                 <br />
                     <a href="bios.html#sheahan">
-                        Luke Sheahan,
+                        Luke C.Sheahan,
                     </a>
                     Duquesne University
 
