Added final 's' for Pascal chapter.

--- a/AntiRats2/FinalDrafts/index.html
+++ b/AntiRats2/FinalDrafts/index.html
@@ -49,7 +49,7 @@
 
             <li>
                     Conservatism and Social Criticism:
-                    Pascal on Faith, Reason, and Politic
+                    Pascal on Faith, Reason, and Politics
                 <br />
                     Tyler Chamberlain
             </li>
