Fixed Tolkein title.

--- a/AntiRats2/FinalDrafts/index.html
+++ b/AntiRats2/FinalDrafts/index.html
@@ -114,7 +114,7 @@
             </li>
 
             <li>
-                    J.R.R. Tolkien: Tales Against Domination
+                Rings and Rationalism: Tolkien’s Tales Against Domination
                 <br />
                         Nathanael Blake
             </li>
