--- a/AntiRats2/FinalDrafts/index.html
+++ b/AntiRats2/FinalDrafts/index.html
@@ -66,7 +66,7 @@
                 "The Gods of the Hearth Exist for Us Still":
                 George Eliot's Critiques of Rationalism
                 <br />
-                    Rob Wyllie
+                    Robert Wyllie
             </li>
 
 
