Change Eliot title.

--- a/AntiRats2/FinalDrafts/index.html
+++ b/AntiRats2/FinalDrafts/index.html
@@ -62,9 +62,7 @@
             </li>
 
             <li>
-                
-                "The Gods of the Hearth Exist for Us Still":
-                George Eliot's Critiques of Rationalism
+                A Modest Spinozist: George Eliot and the Limits of Rationalism
                 <br />
                     Robert Wyllie
             </li>
