Fixed Lowney TOC title.

--- a/AntiRats2/FinalDrafts/index.html
+++ b/AntiRats2/FinalDrafts/index.html
@@ -126,7 +126,7 @@
 
             <li>
                 
-                Beautiful Minds: Gregory Bateson on Humans, Animals and Ecological Systems
+                Beautiful Minds: Gregory Bateson on Ecology, Insanity, and Wisdom
                 <br />
                     Charles Lowney
             </li>
