--- a/AntiRats2/FinalDrafts/index.html
+++ b/AntiRats2/FinalDrafts/index.html
@@ -167,7 +167,9 @@
             </li>
 
             <li>
-                John Gray's Agon: Liberalism, Morality, Politics
+                A Counter-Enlightenment of the Present:
+                A Defence of John Grays’ <i>Modus Vivendi</i>
+                Liberalism
                 <br />
                         Nathan Cockram
             </li>
