Changed Shackle chapter title.

--- a/AntiRats2/FinalDrafts/index.html
+++ b/AntiRats2/FinalDrafts/index.html
@@ -118,8 +118,7 @@
             </li>
 
             <li>
-                
-                The Kaleidic World of G.L.S. Shackle
+                Sheddding the Shackles of Rationalism
                 <br>
                 Gene Callahan
             </li>
