Added J before Wilford in TOC.

--- a/AntiRats2/FinalDrafts/index.html
+++ b/AntiRats2/FinalDrafts/index.html
@@ -108,7 +108,7 @@
                 Metaphor, Meaning, and Mind:
                 Knowledge and Imagination in Owen Barfield
                 <br />
-                        Sarah Wilford
+                        Sarah J. Wilford
             </li>
 
             <li>
