Added all abstracts to abstracts dir.

--- a/AntiRats2/abstracts/gray.html
+++ b/AntiRats2/abstracts/gray.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
-            Hermits, Heroes, and Demagogues:  Dostoevsky's Repudiation of the Rational Actor Model
+            John Gray's Agon: Liberalism, Morality, Politics
         </title>
     </head>
 
@@ -71,28 +71,29 @@
         </div>
 
         <h1>
-            Hermits, Heroes, and Demagogues:  Dostoevsky's Repudiation of the Rational Actor Model
+            John Gray's Agon: Liberalism, Morality, Politics
         </h1>
 
         <p>
-        Richard Avramenko
+        Liberalism is often justified as a means of securing basic individual
+        rights. Indeed, in this capacity, it is often identified as the
+        political creed of the enlightenment. In a series of publications, John
+        Gray has rejected this justification of liberalism, and in so doing, as
+        rejected seeing it as an enlightenment creed. Indeed, in recent times,
+        he has gone so far as to reject calling his own view 'liberal.'
         </p>
 
         <p>
-        This essay will explore Fyodor M. Dostoevsky's confrontation with
-        enlightenment rationalism as manifest in the modern scientific approach
-        to politics and political science. Whereas modern political science
-        aims to regress all humans to the mean, Dostoevsky asks us not to
-        forgot those folks who might be called outliers. Outliers are often the
-        forgotten folk who make little difference in the story the statistical
-        models try to tell. For Dostoevsky, these outliers are often hiding in
-        the little spaces below the floor—and this is the lesson of the
-        Underground Man in his <i>Notes from the Underground</i>. This essay will
-        therefore analyze the place of outliers--be they hermits, heroes, or
-        demagogues--in Dostoevsky's distinctly Russian view of "Western"
-        rationalism. Western rationalism, I will argue, is for Dostoevsky, the
-        Baal that terrified him as he stood before the Crystal Palace at
-        London's Universal Exhibition of 1862.
+        In this essay, my task is to suggest that this rejection of the label
+        by Gray, while understandable, is premature. For I shall argue that we
+        can see Gray's thought as squarely within what I will call a Hobbesian
+        tradition of liberal thought. Moreover, I will also contend that this
+        Hobbesian liberalism has the potential to generate promising strategies
+        for dealing with contemporary objections to liberalism.
+        </p>
+
+        <p>
+            <a href="FirstDrafts/Cockram.pdf">Initial draft</a> 
         </p>
 
     </body>
