Updated Callahan chapter title.

--- a/AntiRats2/index.html
+++ b/AntiRats2/index.html
@@ -219,7 +219,7 @@
 
             <li>
                 <a href="Shackle.html">
-                The Kaleidic World of G.L.S. Shackle
+                Shedding the Shackles of Rationalism
                 </a>
                 <br>
                 <a href="bios.html#callahan">
